fixing nav spacing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,7 +34,7 @@ body {
     padding-bottom: 270px;
   }
 
-  @media (max-width: 750px) {
+  @media (max-width: 850px) {
     .container {
       margin-top: 140px;
     }
