--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -108,7 +108,7 @@
         padding-top: 10px;
         padding: 17px 0 10px 5px;
         margin: 0 5px;
-        min-width: 40px;
+        min-width: 45px;
         text-align: right;
       }
       .out.sign {
@@ -142,7 +142,7 @@
       }
       .in.user {
         width: initial;
-        min-width: 17%;
+        margin-right: -30px;
       }
     }
   }
